--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="content_description_post_image">post image</string>
+    <string name="comments_size">This post has %1s comments</string>
 </resources>
