--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="content_description_post_image">post image</string>
     <string name="content_description_user_image">user image</string>
     <string name="comments_size">This post has %1s comments</string>
+    <string name="transition_image">transition image</string>
 </resources>
