Moved post list logic to postlist module
- Moved tests into correct directories and shared testImplementation

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Babylon Posts</string>
     <string name="content_description_post_image">post image</string>
     <string name="content_description_user_image">user image</string>
-    <string name="comments_size">This post has %1s comments</string>
-    <string name="comments_title">Comments</string>
-    <string name="post_details_title">Post #%1d</string>
     <string name="transition_image">transition image</string>
+    <string name="size_comments">This post has %1s comments</string>
+    <string name="title_comments">Comments</string>
+    <string name="title_post_details">Post #%1d</string>
     <string name="title_list">Babylon Posts</string>
 </resources>
